--- a/src/pages/app/admin/createscenarios/createscenarios.module.css
+++ b/src/pages/app/admin/createscenarios/createscenarios.module.css
@@ -157,12 +157,36 @@
 .customRichTextEditorStyleClass > div:nth-child(2)  {
   height: 15rem ;
 }
-.gameIntroductionTextAreaInputs {
+/* .gameIntroductionTextAreaInputs {
   font: normal;
-  height: 100%; /* to do change height to % */
+  height: 100%; 
   resize: none;
   font-family: "Helvetica 400";
+} */
+.gameIntroductionTextAreaInputs {
+  font-size: 1.3rem;
 }
+.gameIntroductionTextAreaInputs > div:first-child {
+  height: 15rem !important;
+  margin-top: 1rem;
+}
+/* .gameIntroductionTextAreaInputs > div:first-child > div:nth-child(1) {
+  font-size: 1.3rem;
+} */
+/* .gameIntroductionTextAreaInputs label {
+  font-family: "Helvetica 400";
+  font-size: 1.3rem ;
+}
+
+.gameIntroductionTextAreaInputs > div:first-child > div:nth-child(2):focus + .gameIntroductionTextAreaInputs label {
+  font-size: 0.75rem !important; 
+} */
+.gameIntroductionTextAreaInputs > div:first-child > div:nth-child(1),
+.gameIntroductionTextAreaInputs > div:first-child > div:nth-child(2){
+  /* background:  var(--background-color); */
+  background-color: var(--innerbackground);
+}
+
 .inputStyleClass {
   font: normal;
   font-family: "Helvetica 400";
@@ -174,4 +198,49 @@
   justify-content: end;
   gap: 1rem;
   margin-top: 1rem;
+}
+
+.scenarioNameInput {
+  font-size: 1.3rem;
+  /* font-family: "Helvetica 400"; */
+}
+.scenarioNameInput > div:first-child > div:nth-child(1),
+.scenarioNameInput > div:first-child > div:nth-child(2){
+  /* background:  var(--background-color); */
+  background-color: var(--innerbackground);
+
+
+}
+.scenarioNameInput label{
+  /* font-family: "Helvetica 400"; */
+}
+
+.scenarioNameInput > div:first-child > div:nth-child(2) {
+height: 3.5rem;
+}
+
+/* Text editor */
+.quill {
+  /* width: 30rem !important; */
+  background-color: var(--innerbackground);
+  width: 100%;
+  margin-top: 1rem;
+}
+
+.quill > div {
+  border: none !important;
+}
+
+.quill > div:nth-child(2) {
+  height: 15rem !important;
+  font-family:  'Helvetica 400';
+  font-size: 1.3rem;
+  padding-top: 0.5rem;
+  padding-left: 2rem;
+}
+.quill > div:nth-child(1) > div:nth-child(1) {
+  /* flex-wrap: wrap !important; */
+}
+.gameIntroductionTextAreaInputs textarea{
+  height: inherit !important;
 }
