--- a/src/pages/app/admin/homepage/homepage.module.css
+++ b/src/pages/app/admin/homepage/homepage.module.css
@@ -1,3 +1,4 @@
+
 .topContainer {
   width: 100%;
   height: fit-content;
@@ -227,6 +228,7 @@
   color: var(--primary);
   text-align: left;
   padding-left: 2rem;
+  vertical-align: middle !important;
 }
 
 .table_content tbody {
