--- a/src/pages/app/admin/updatescenarios/updatescenarios.module.css
+++ b/src/pages/app/admin/updatescenarios/updatescenarios.module.css
@@ -170,7 +170,6 @@
 .customRichTextEditorStyleClass > div:nth-child(2)  {
   height: 15rem ;
 }
-
 .inputStyleClass {
   font: normal;
   font-family: 'Helvetica 400';
@@ -182,4 +181,61 @@
   justify-content: end;
   gap: 1rem;
   margin-top: 1rem;
+}
+
+/* Input field */
+.scenarioNameInput {
+  font-size: 1.3rem;
+  /* font-family: "Helvetica 400"; */
+}
+.scenarioNameInput > div:first-child > div:nth-child(1),
+.scenarioNameInput > div:first-child > div:nth-child(2){
+  background:  var(--background-color);
+
+}
+.scenarioNameInput label{
+  /* font-family: "Helvetica 400"; */
+}
+
+.scenarioNameInput > div:first-child > div:nth-child(2) {
+height: auto;
+}
+
+/* Text editor */
+.quill {
+  /* width: 30rem !important; */
+  background-color: var(--innerbackground);
+  width: 100%;
+  margin-top: 1rem;
+}
+
+.quill > div {
+  border: none !important;
+}
+
+.quill > div:nth-child(2) {
+  height: 15rem !important;
+  font-family:  'Helvetica 400';
+  font-size: 1.3rem;
+  padding-top: 0.5rem;
+  padding-left: 2rem;
+}
+.quill > div:nth-child(1) > div:nth-child(1) {
+  /* flex-wrap: wrap !important; */
+}
+
+/* Textarea */
+.gameIntroductionTextAreaInputs textarea{
+  height: inherit !important;
+}
+.gameIntroductionTextAreaInputs {
+  font-size: 1.3rem;
+}
+.gameIntroductionTextAreaInputs > div:first-child {
+  height: 15rem !important;
+  margin-top: 1rem;
+}
+.gameIntroductionTextAreaInputs > div:first-child > div:nth-child(1),
+.gameIntroductionTextAreaInputs > div:first-child > div:nth-child(2){
+  background:  var(--background-color);
 }
