--- a/src/pages/app/admin/createscenarios/createscenarios.module.css
+++ b/src/pages/app/admin/createscenarios/createscenarios.module.css
@@ -123,7 +123,7 @@
 .gameIntroductionLeftInputs {
   flex: 4.5;
   height: 100%;
-  max-width: 50rem;
+  max-width: 80rem;
   min-width: 30rem;
 }
 
@@ -243,4 +243,33 @@ height: 3.5rem;
 }
 .gameIntroductionTextAreaInputs textarea{
   height: inherit !important;
+}
+
+/* TextEditor */
+.customRichTextEditorContaierClass {
+  /* margin-top: 2rem; */
+  font-family: "Helvetica 400";
+  width: 100%;
+  height: 100%;
+}
+.customRichTextEditorStyleClass > div:nth-child(2)  {
+  height: 15rem;
+  width: 100%;
+}
+.customEditorStyleClass {
+  width: 100%;
+  background-color: var(--innerbackground);
+  margin-top: 1rem;
+}
+.customEditorStyleClass > div {
+  border: none !important;
+}
+.customEditorStyleClass > div:nth-child(2) {
+  height: 15rem !important;
+}
+.customEditorStyleClass > div:nth-child(1) {
+  height: 4.5rem !important;
+}
+.customEditorStyleClass > div:nth-child(1) > div:nth-child(1) {
+  flex-grow: 0;
 }
