--- a/src/components/common/textEditor/textEditor.module.css
+++ b/src/components/common/textEditor/textEditor.module.css
@@ -31,3 +31,7 @@
   font-size: 1.1rem;
   margin-top: 0.2rem;
 }
+/* .ck.ck-dropdown .ck-dropdown__panel.ck-dropdown__panel_ne,
+.ck.ck-dropdown .ck-dropdown__panel.ck-dropdown__panel_se {
+  height: 4.5rem;
+} */
