--- a/src/components/common/customInput/customInput.module.css
+++ b/src/components/common/customInput/customInput.module.css
@@ -70,9 +70,22 @@
   padding-top: 1rem;
 }
  */
-.input > div:first-child > div:nth-child(1) {
+.input > div:first-child > div:nth-child(1) > label {
   line-height: 1.2rem !important;
 }
+
+/* Center the label */
+/* .input > div:first-child > div:nth-child(1) > label {
+  line-height: 2rem; 
+}
+.input > div:first-child > div:nth-child(2) > input:focus ~ .input > div:first-child > div:nth-child(1) > label {
+  line-height: 1.2rem !important; 
+}
+.input > div:first-child > div:nth-child(2) > input {
+  padding-top: 1rem;
+} */
+
+
 .defaultTextAreaStyles {
   height: 15rem;
 }
