--- a/src/components/ui/navbar/navbar.module.css
+++ b/src/components/ui/navbar/navbar.module.css
@@ -35,7 +35,7 @@
   font-size: 1.3rem;
   margin-right: 2.4rem;
   font-weight: 500;
-  width: 12rem;
+  max-width: 12rem;
   text-overflow: ellipsis;
   overflow: hidden;
 }
