QA [ buttons croped ] resolved

--- a/src/pages/app/admin/createusers/createusers.module.css
+++ b/src/pages/app/admin/createusers/createusers.module.css
@@ -33,7 +33,7 @@
 .mainContainer {
   width: 100%;
   height: fit-content;
-  height: 36rem;
+  /* height: 36rem; */
 }
 .formContainer {
   width: 100%;
