--- a/src/components/common/button/button.module.css
+++ b/src/components/common/button/button.module.css
@@ -1,14 +1,27 @@
 .default {
-  display: inline-block;
-  font-weight: 500;
+  /* display: inline-block;
+  font-weight: 500; 
   text-align: center;
-  border: 0.1rem solid transparent;
-  /* border: 0.2rem solid #ffe297 !important; */
-  padding: 0.5rem 2.5rem;
+  border: 0.1rem solid transparent; */
+  /* padding: 0.5rem 2.5rem;
   font-size: 1.2rem;
   line-height: 1.5;
   border-radius: 0.5rem;
   margin: 0.5rem 0;
+  background-color: var(--primary);
+  color: var(--black); */
+
+
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.2rem;
+  font-family: "Helvetica 400";
+  border: 0.1rem solid transparent;
+  padding: 0.65rem 2.8rem;
+  padding-top: 0.8rem;
+  border-radius: 0.5rem;
   background-color: var(--primary);
   color: var(--black);
 }
@@ -28,7 +41,10 @@
 }
 
 .buttonlight {
-  display: inline-block;
+  /* display: inline-block; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
   font-weight: 500;
   text-align: center;
   border: 0.1rem solid transparent;
@@ -42,10 +58,9 @@
 }
 
 .cancel {
-  display: inline-block;
+  /* display: inline-block;
   font-weight: 500;
   text-align: center;
-  /* border: 0.1rem solid transparent; */
   padding: 0.5rem 2.5rem;
   font-size: 1.2rem;
   line-height: 1.5;
@@ -53,7 +68,19 @@
   margin: 0.5rem 0;
   background-color: var(--primary-light);
   color: var(--black);
+  border: 0.2rem solid #ffe297 !important; */
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.2rem;
+  font-family: "Helvetica 400";
   border: 0.2rem solid #ffe297 !important;
+  padding: 0.65rem 2.8rem;
+  padding-top: 0.8rem;
+  border-radius: 0.5rem;
+  background-color: var(--primary-light);
+  color: var(--black);
 }
 
 .default:hover,
