--- a/src/components/ui/navbar/navbar.module.css
+++ b/src/components/ui/navbar/navbar.module.css
@@ -20,8 +20,9 @@
   height: 100%;
 }
 .label {
-  font-size: 1.3rem;
-  padding-left: 2.4rem;
+  font-size: 1.6rem;
+  padding-left: 0.5rem;
+  font-family: "helvetica 400";
 }
 
 .containerRight {
